// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputListField when \`editable\` is false renders correctly when \`showFieldDescription\` is false 1`] = `
<ListField
  onRemove={null}
  renderValue={[Function]}
  style={
    Object {
      "maxHeight": "100px",
      "minWidth": "100%",
      "overflowY": "auto",
    }
  }
  values={
    Array [
      "testando...",
    ]
  }
/>
`;

exports[`TextInputListField when \`editable\` is false renders correctly when \`showFieldDescription\` is true 1`] = `
<FormField>
  <b>
    Testando:
    :
  </b>
  <ListField
    onRemove={null}
    renderValue={[Function]}
    style={
      Object {
        "marginTop": "0px",
        "maxHeight": "100px",
        "overflowY": "auto",
      }
    }
    values={
      Array [
        "testando...",
      ]
    }
  />
</FormField>
`;

exports[`TextInputListField when \`editable\` is true renders correctly 1`] = `
<EditableListInput
  error=""
  field={
    Object {
      "_id": "1",
      "description": "Testando:",
    }
  }
  onChange={[Function]}
  type="text"
  values={
    Array [
      "testando...",
    ]
  }
/>
`;

exports[`TextInputListField when \`editable\` is true renders correctly when \`error\` is passed 1`] = `
<EditableListInput
  error="Something went wrong..."
  field={
    Object {
      "_id": "1",
      "description": "Testando:",
    }
  }
  onChange={[Function]}
  type="text"
  values={
    Array [
      "testando...",
    ]
  }
/>
`;
